# btorch

./: .all-contributorsrc  .codecov.yml  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  README.md  README.zh.md  analysis.py  dev-requirements.yaml  environment.yml  mkdocs.yml  neuron_hybrid.py  nsys_torch_lif.nsys-rep  nsys_triton_lif.nsys-rep  nsys_triton_lif.sqlite  pyproject.toml  requirements-dev.txt  requirements.txt  spmm_report.nsys-rep  spmm_report.sqlite  synapse.py
.agent/: docs_plan.md
.github/: dependabot.yml
.github/workflows/: build-docs.yml  ci.yml  desloppify.yml  pr_agent.yml  release.yml  translate-docs.yml
benchmark/: benchmark_lif.py  benchmark_lif_back.py  benchmark_sparse.py  debug_lif_parity.py
benchmark/dense_glif_net/: bench_glif_dense.py  bench_glif_kernels.py  bench_glif_multistep.py  glif_common.py  glif_cupy.py  glif_triton.py  glif_warp.py  profile_cupy_stream_sync.py  profile_dlpack_overhead.py  run_glif_sim.py  test_glif_kernels.py
benchmarks/models/: benchmark_mixed_vs_baseline.py
benchmarks/sparse/: benchmark_event_sparse.py  benchmark_sparse.py
benchmarks/sparse_rnn/: profile_sparse_rnn.py
benchmarks/spiking_metrics/: bench_spiking_analysis.py
btorch/: __init__.py  config.py
btorch/analysis/: __init__.py  aggregation.py  clustering.py  metrics.py  spiking.py  statistics.py  tuning.py  two_compartment_fit.py
btorch/analysis/dynamic_tools/: README.md  attractor_dynamics.py  complexity.py  criticality.py  ei_balance.py  lyapunov_dynamics.py  micro_scale.py  spiking.py
btorch/backend/: __init__.py  sparse.py  triton_utils.py
btorch/backend/triton/: __init__.py  event_kernels.py  event_sparse.py  lif.py  lif_kernels.py  sparse.py
btorch/backend/warp/: sparse.py
btorch/connectome/: __init__.py  augment.py  connection.py
btorch/datasets/: __init__.py  transforms.py
btorch/io/: serialization.py
btorch/models/: __init__.py  base.py  bilinear.py  connection_conversion.py  constrain.py  conv.py  dlif.py  environ.py  functional.py  glif.py  history.py  init.py  lif.py  linear.py  ode.py  parametrize.py  regularizer.py  rnn.py  scale.py  shape.py  surrogate.py  synapse-back.py  synapse-new.py  synapse-old.py  synapse.py
btorch/models/hex/: __init__.py  conv.py  eye.py
btorch/models/neurons/: __init__.py  alif.py  glif.py  izhikevich.py  lif.py  mixed.py  two_compartment.py
btorch/models/surrogate/: __init__.py  atan.py  base.py  erf.py  poisson_random.py  sigmoid.py  superspike.py  triangle.py
btorch/sparse/: DESIGN.md  __init__.py  base.py  constraints.py  errors.py  events.py  initializers.py  layouts.py  matrices.py  operations.py  param.py  parameterization.py  procedural.py  properties.py
btorch/sparse/backends/: __init__.py  native.py  torch_sparse.py
btorch/utils/: __init__.py  bench.py  conf.py  dict_utils.py  file.py  hdf5_utils.py  hex_utils.py  pandas_utils.py  yaml_utils.py
btorch/utils/grad_checkpoint/: __init__.py  checkpoint.py  test_checkpoint.py
btorch/utils/hex/: __init__.py  coords.py  data.py  distance.py  doubled.py  line.py  neighbor.py  offset.py  range.py  resolve.py  storage.py  transform.py
btorch/utils/sloppiness/: __init__.py  spectrum.py
btorch/visualisation/: __init__.py  aggregation.py  dynamics.py  hexmap.py  network.py  neuropil.py  timeseries.py  tuning.py
btorch/visualisation/hex/: __init__.py  animate.py  interactive.py  receptive_field.py  static.py
conda/recipe/: meta.yaml
docs/: analysis.md  conf.py  gen_ref_pages.py  hex_grids.md  index.md  index.rst  requirements.txt  visualisation.md
docs/en/: mkdocs.yml
docs/en/docs/: changelog.md  contributing.md  development.md  examples.md  faq.md  hex.md  index.md  installation.md  visualisation.md
docs/zh/: mkdocs.yml
docs/zh/docs/: changelog.md  contributing.md  development.md  examples.md  faq.md  hex.md  index.md  installation.md  skills.md  visualisation.md
examples/: allen_two_compartment_fit.py  delayed_synapse_demo.py  fmnist.py  fmnist_lightning.py  rsnn.py  rsnn_brain.py
scripts/: docs.py  gen_api_pages.py  translate.py
skills/btorch-snn-modelling/: SKILL.md
skills/btorch-snn-modelling/agents/: openai.yaml
skills/btorch-snn-modelling/references/: custom_modules.md  heter_delays.md  heter_synapses.md  performance.md  regularization.md  scaling.md  training_example.md
skills/omegaconf-config/: SKILL.md
skills/omegaconf-config/agents/: openai.yaml
skills/omegaconf-config/references/: examples.md
tests/: quicktest.py
tests/analysis/: test_aggregation.py  test_branching.py  test_spiking.py  test_statistics.py
tests/analysis/dynamic_tools/: test_attractor.py  test_criticality.py  test_demo_dynamics_metrics.py  test_ei_balance.py  test_lyapunov_dynamics.py  test_spiking.py
tests/backend/: test_compilation_opt.py  test_sparse_ops.py
tests/backend/triton/: test_triton_event_sparse.py  test_triton_lif.py  test_triton_optimization.py  test_triton_sparse.py
tests/benchmark/: __init__.py  bench_event_sparse_triton.py  bench_lif_triton.py  bench_sparse.py  bench_sparse_lif_rnn_triton.py  draw_glif.py  event_sparse_bench_utils.py  numpy_model.py  test_ode.py  test_synapse.py  vis_glif.py
tests/connectome/: test_augment.py  test_delay_expansion.py
tests/io/: test_serialization.py
tests/models/: draw_rnn_graph.py  test_bilinear.py  test_compile.py  test_connection_conversion.py  test_conv.py  test_cudagraph.py  test_delayed_psc.py  test_dlif.py  test_gap_junction.py  test_hetero_rnn.py  test_hetersynapse_conn.py  test_history.py  test_linear.py  test_mem_load_save.py  test_multi_dim_axes.py  test_rnn.py  test_rnn_compile.py  test_sparse_rnn.py  test_surrogate.py  test_synapse.py  test_synapse_ode.py
tests/sparse/: test_sparse_architecture.py
tests/utils/: bench.py  compile.py  conn.py  file.py  test_conf.py  test_sloppiness.py
tests/visualisation/: test_aggregation.py  test_dynamics.py  test_hexmap.py  test_neuron_traces.py  test_raster.py  test_raster_advanced.py  test_raster_enhancements.py  test_spectrum_enhancements.py  test_timeseries_plots.py
(+44 files in other folders)
