[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[project]
name = "btorch"
version = "0.1.0"
description = "Brain-inspired torch utilities and models for neuromorphic research."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Btorch contributors" }]
dependencies = [
    "torch",
    "numpy>=1.24",
    "pandas>=2",
    "scipy>=1.10",
    "jaxtyping>=0.2.20",
    "typing-extensions>=4.5",
    "spikingjelly",
    "omegaconf",
    "hdf5plugin",
    "plotly",
    "nolds!=0.6.3",
    "powerlaw",
    "matplotlib>=3.7",
    "xarray",
    "zarr",
    "numcodecs",
]

[project.optional-dependencies]
docs = [
  "zensical>=0.0.32",
  "mkdocstrings-python>=0.24",
  "mkdocs-gen-files>=0.5",
  "openai>=1.0",
  "sphinx>=7.0",
  "myst-parser>=2.0",
]
test = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "matplotlib>=3.7",
]
# NOTE: torch_scatter/torch_sparse require prebuilt wheels from PyG.
# Install with: pip install torch_scatter torch_sparse -f https://data.pyg.org/whl/torch-<version>+<cuda>.html
# The extras below declare the dependency but cannot install from PyPI directly.
sparse = [
  "torch_scatter",
  "torch_sparse",
]
dev = [
  "btorch[docs,test,sparse]",
  "pre-commit>=3.7",
  "ruff>=0.4",
  "pytest>=8.2",
  "pytest-cov>=5.0",
]

[project.urls]
Homepage = "https://github.com/your-org/btorch"
Repository = "https://github.com/your-org/btorch"
Documentation = "https://github.com/your-org/btorch/docs"

# uv sources: git forks and local dependencies
[tool.uv.sources]
omegaconf = { git = "https://github.com/alexfanqi/omegaconf.git" }

[tool.uv]
# torch_scatter and torch_sparse need torch as a build dependency
extra-build-dependencies = { torch-scatter = ["torch"], torch-sparse = ["torch"] }

[tool.hatch.build.targets.wheel]
packages = ["btorch"]

[tool.hatch.build.targets.sdist]
include = [
  "/btorch",
  "/README.md",
  "/LICENSE",
  "/docs",
]
allow-direct-references = true

# pip-compile equivalent: uv pip compile pyproject.toml -o requirements.txt

[tool.ruff.lint]
select = ["E", "F", "I", "I001"]
ignore = ["E731", "F722"]

[tool.ruff.lint.isort]
combine-as-imports = true
lines-after-imports = 2
extra-standard-library = ["typing_extensions"]
order-by-type = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
