[build-system]
requires = ["hatchling>=1.29.0", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[project]
name = "btorch"
description = "Brain-inspired torch utilities and models for neuromorphic research."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Btorch contributors" }]
dynamic = ["version"]
dependencies = [
    "torch",
    "numpy>=1.24",
    "pandas>=2",
    "scipy>=1.10",
    "jaxtyping>=0.2.20",
    "typing-extensions>=4.5",
    "spikingjelly",
    "omegaconf",
    "hdf5plugin",
    "plotly",
    "nolds!=0.6.3",
    "powerlaw",
    "matplotlib>=3.7",
    "xarray",
    "zarr",
    "numcodecs",
]
classifiers = [
    'Natural Language :: English',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3.14',
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering :: Bio-Informatics',
    'Topic :: Scientific/Engineering :: Mathematics',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'Topic :: Software Development :: Libraries',
]
keywords = [
    'computational neuroscience',
    'brain-inspired computing',
    'brain simulation',
    'brain modeling',
    'spiking neural networks',
    'neuromorphic computing',
    'RSNN',
]

[project.urls]
Homepage = "https://github.com/Criticality-Cognitive-Computation-Lab/btorch"
Repository = "https://github.com/Criticality-Cognitive-Computation-Lab/btorch"
Documentation = "https://criticality-cognitive-computation-lab.github.io/btorch/"

[project.optional-dependencies]
# NOTE: torch_scatter/torch_sparse wheels are CUDA-variant-specific and cannot be locked
# cross-platform. The [tool.uv.sources] below covers CPU (uv/pip CI only).
# For CUDA: pip install torch_scatter torch_sparse -f https://data.pyg.org/whl/torch-<ver>+<cuXXX>.html
# For conda: conda install torch_scatter torch_sparse  -c pyg  (no find-links needed)
sparse = [
  "torch_scatter",
  "torch_sparse",
]

[dependency-groups]
docs = [
  "zensical>=0.0.32",
  "mkdocstrings-python>=0.24",
  "mkdocs-gen-files>=0.5",
  "openai>=1.0",
]
test = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "matplotlib>=3.7",
  "kaleido",
]
dev = [
  { include-group = "docs" },
  { include-group = "test" },
  "pre-commit>=3.7",
  "ruff>=0.4",
]

[tool.uv.sources]
# torch resolved from PyTorch CPU index (uv/pip CI); CUDA users install torch separately
torch = { index = "pytorch-cpu" }
# torch_scatter/sparse are NOT resolved via uv — their wheel URL encodes the torch+CUDA variant.
# uv locks them as PyPI sdist stubs but CI and end users install from PyG (see sparse extra note).

[tool.uv]
# torch_scatter and torch_sparse need torch as a build dependency
extra-build-dependencies = { torch-scatter = ["torch"], torch-sparse = ["torch"] }
cache-keys = [{ file = "pyproject.toml" }, { git = { commit = true, tags = true } }]

[tool.uv-dynamic-versioning]
fallback-version = "0.0.0"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.hatch.build.targets.wheel]
packages = ["btorch"]

[tool.hatch.build.targets.sdist]
include = [
  "/btorch",
  "/README.md",
  "/LICENSE",
  "/docs",
]
allow-direct-references = true

# Docs: uv sync --only-group docs
# Tests: uv sync --only-group test
# Dev: uv sync --group dev

[tool.ruff.lint]
select = ["E", "F", "I", "I001"]
ignore = ["E731", "F722"]

[tool.ruff.lint.isort]
combine-as-imports = true
lines-after-imports = 2
extra-standard-library = ["typing_extensions"]
order-by-type = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
